tests/errors/bigint_zero_neg_pow.experr
zero cannot be raised to a negative power
